# ADPfusionForest

./: .buildbot-devel  .travis.yml  ADPfusionForest.cabal  README.md  cabal.project  changelog.md  devel-stack.yaml  stack.yaml
ADP/Fusion/: Forest.hs
ADP/Fusion/Core/ForestAlign/: PermuteRightLinear.hs  RightLinear.hs
ADP/Fusion/Core/ForestEdit/: LeftLinear.hs
ADP/Fusion/Forest/Align/: PRL.hs  RL.hs
ADP/Fusion/Forest/Edit/: LL.hs
ADP/Fusion/SynVar/Indices/ForestAlign/: RightLinear.hs
ADP/Fusion/SynVar/Indices/ForestEdit/: LeftLinear.hs
ADP/Fusion/Term/Deletion/ForestAlign/: RightLinear.hs
ADP/Fusion/Term/Deletion/ForestEdit/: LeftLinear.hs
ADP/Fusion/Term/Epsilon/ForestAlign/: PermuteRightLinear.hs  RightLinear.hs
ADP/Fusion/Term/Epsilon/ForestEdit/: LeftLinear.hs
ADP/Fusion/Term/Node/: Type.hs
ADP/Fusion/Term/Node/ForestAlign/: PermuteRightLinear.hs  RightLinear.hs
ADP/Fusion/Term/Node/ForestEdit/: LeftLinear.hs
Data/Forest/Static/: ADP.hs  AlignPermuteRL.hs  AlignRL.hs  EditLL.hs  Left.hs  LeftSparse.hs  Node.hs
examples/: de.nwk  en.nwk  paper-t1.nwk  paper-t2.nwk  readme_language_trees  sv.nwk  t1.nwk  t2.nwk  t3.nwk  t4.nwk  t7.nwk  t8.nwk
src/: AffineAlignNewickTrees.hs  AffineAlignNewickTreesSmall.hs  AffineEditNewickTrees.hs  AlignNewickTrees.hs  AlignNewickTrees1d.hs  AlignPermuteNewickTrees.hs  EditNew.hs  EditNewickTrees.hs  SingleEdit.hs
