name:           ADPfusionForest
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, Sarah Berkemer, 2016
copyright:      Christian Hoener zu Siederdissen, 2016
homepage:       https://github.com/choener/ADPfusion
bug-reports:    https://github.com/choener/ADPfusionForest/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Formal Languages, Bioinformatics
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.3
synopsis:       Dynamic programming on tree- and forest structures
description:
                XXX



Extra-Source-Files:
  changelog.md
  README.md
  stack.yaml



library
  build-depends: base                   >= 4.7      &&  < 4.9
               , BiobaseNewick          >= 0.0.0.1  &&  < 0.0.1.0
               , ForestStructures       >= 0.0.0.1  &&  < 0.0.1.0
               , ADPfusion              >= 0.5.1    &&  < 0.5.2
               , containers             >= 0.5      &&  < 0.6
               , fgl                    >= 5.5      &&  < 5.6
               , hybrid-vectors         >= 0.2      &&  < 0.3
               , unordered-containers   >= 0.2      &&  < 0.3
               , vector                 >= 0.10     &&  < 0.12
               , vector-th-unbox        >= 0.2      &&  < 0.3
  exposed-modules:
    Data.Forest.Static.ADP
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , AllowAmbiguousTypes
                    , DataKinds
                    , FlexibleContexts
                    , GADTs
                    , KindSignatures
                    , OverloadedStrings
                    , RankNTypes
                    , StandaloneDeriving
                    , UndecidableInstances
  ghc-options:
    -O2



--test-suite properties
--  type:
--    exitcode-stdio-1.0
--  main-is:
--    properties.hs
--  ghc-options:
--    -threaded -rtsopts -with-rtsopts=-N -O2 -funbox-strict-fields
--  hs-source-dirs:
--    tests
--  default-language:
--    Haskell2010
--  default-extensions: BangPatterns
--  build-depends: base
--               , ForestStructures
--               , QuickCheck
--               , test-framework               >= 0.8  &&  < 0.9
--               , test-framework-quickcheck2   >= 0.3  &&  < 0.4
--               , test-framework-th            >= 0.2  &&  < 0.3
--
--
--
--benchmark benchmark
--  build-depends:  base
--               ,  criterion   >=  1.0.2 &&  < 1.1.1
--               ,  ForestStructures
--  default-language:
--    Haskell2010
--  hs-source-dirs:
--    tests
--  main-is:
--    benchmark.hs
--  type:
--    exitcode-stdio-1.0
--  ghc-options:
--    -O2



source-repository head
  type: git
  location: git://github.com/choener/ADPfusionForest

