name:           ADPfusionForest
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, Sarah Berkemer, 2016
copyright:      Christian Hoener zu Siederdissen, 2016
homepage:       https://github.com/choener/ADPfusionForest
bug-reports:    https://github.com/choener/ADPfusionForest/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Formal Languages, Bioinformatics
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.3
synopsis:       Dynamic programming on tree and forest structures
description:
                ADPfusion for formal languages on tree and forest structures.
                This library connects @ForestStructures@, a library which
                defines efficient, tree-like structures and @ADPfusion@. The
                result is the ability to easily write formal grammars which act
                on input trees (as compared to the more common input strings).



Extra-Source-Files:
  changelog.md
  README.md
  stack.yaml
  examples/t1.nwk
  examples/t2.nwk



flag examples
  description: build the examples
  default:     False
  manual:      True



library
  build-depends: base                   >= 4.7      &&  < 4.9
               , ADPfusion              >= 0.5.1    &&  < 0.5.3
               , containers             >= 0.5      &&  < 0.6
               , fgl                    >= 5.5      &&  < 5.6
               , ForestStructures       >= 0.0.0.1  &&  < 0.0.1.0
               , GrammarProducts        >= 0.1      &&  < 0.2
               , PrimitiveArray         >= 0.7.0    &&  < 0.7.1
               , strict                 >= 0.3      &&  < 0.4
               , text                   >= 1.2      &&  < 1.3
               , unordered-containers   >= 0.2      &&  < 0.3
               , vector                 >= 0.10     &&  < 0.12
               , vector-th-unbox        >= 0.2      &&  < 0.3

  exposed-modules:
    Data.Forest.Static.AlignRL
    Data.Forest.Static.EditLL
    Data.Forest.Static.Node
  default-language:
    Haskell2010
  default-extensions: AllowAmbiguousTypes
                    , BangPatterns
                    , DataKinds
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
  ghc-options:
    -O2
    -funbox-strict-fields



executable AlignNewickTrees
  if flag(examples)
    buildable:
      True
    build-depends: base
                 , ADPfusion
                 , ADPfusionForest
                 , BiobaseNewick          >= 0.0.0.1  &&  < 0.0.1.0
                 , cmdargs                >= 0.10     &&  < 0.11
                 , containers
                 , filepath
                 , ForestStructures
                 , FormalGrammars         >= 0.3      &&  < 0.4
                 , log-domain             >= 0.10     &&  < 0.11
                 , PrimitiveArray
                 , PrimitiveArray-Pretty  >= 0.0      &&  < 0.1
                 , text
                 , vector
  else
    buildable:
      False
  hs-source-dirs:
    src
  main-is:
    AlignNewickTrees.hs
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DataKinds
                    , DeriveDataTypeable
                    , FlexibleContexts
                    , GADTs
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , QuasiQuotes
                    , RecordWildCards
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  ghc-options:
    -O2
    -funbox-strict-fields



executable AffineAlignNewickTreesSmall
  if flag(examples)
    buildable:
      True
    build-depends: base
                 , ADPfusion
                 , ADPfusionForest
                 , BiobaseNewick          >= 0.0.0.1  &&  < 0.0.1.0
                 , cmdargs                >= 0.10     &&  < 0.11
                 , containers
                 , filepath
                 , ForestStructures
                 , FormalGrammars         >= 0.3      &&  < 0.4
                 , log-domain             >= 0.10     &&  < 0.11
                 , PrimitiveArray
                 , PrimitiveArray-Pretty  >= 0.0      &&  < 0.1
                 , text
                 , vector
  else
    buildable:
      False
  hs-source-dirs:
    src
  main-is:
    AffineAlignNewickTreesSmall.hs
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DataKinds
                    , DeriveDataTypeable
                    , FlexibleContexts
                    , GADTs
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , QuasiQuotes
                    , RecordWildCards
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  ghc-options:
    -O2
    -funbox-strict-fields



executable EditNewickTrees
  if flag(examples)
    buildable:
      True
    build-depends: base
                 , ADPfusion
                 , ADPfusionForest
                 , BiobaseNewick          >= 0.0.0.1  &&  < 0.0.1.0
                 , cmdargs                >= 0.10     &&  < 0.11
                 , containers
                 , filepath
                 , ForestStructures
                 , FormalGrammars         >= 0.3      &&  < 0.4
                 , log-domain             >= 0.10     &&  < 0.11
                 , PrimitiveArray
                 , PrimitiveArray-Pretty  >= 0.0      &&  < 0.1
                 , text
                 , vector
  else
    buildable:
      False
  hs-source-dirs:
    src
  main-is:
    EditNewickTrees.hs
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DataKinds
                    , DeriveDataTypeable
                    , FlexibleContexts
                    , GADTs
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , QuasiQuotes
                    , RecordWildCards
                    , TemplateHaskell
                    , TypeFamilies
                    , TypeOperators
  ghc-options:
    -O2
    -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -O2 -funbox-strict-fields
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: BangPatterns
  build-depends: base
               , ADPfusionForest
               , QuickCheck
               , tasty              >= 0.11
               , tasty-quickcheck   >= 0.8
               , tasty-th           >= 0.1



benchmark benchmark
  build-depends:  base
               ,  criterion   >=  1.0.2
               ,  ForestStructures
  default-language:
    Haskell2010
  hs-source-dirs:
    tests
  main-is:
    benchmark.hs
  type:
    exitcode-stdio-1.0
  ghc-options:
    -O2



source-repository head
  type: git
  location: git://github.com/choener/ADPfusionForest

